--- a/index.html
+++ b/index.html
@@ -1,1 +1,250 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Witch of mountain winds</title><link rel="stylesheet" href="main.631655cb.css"><link rel="icon" type="image/png" href="Group 8.b4909735.png"></head><body> <header class="header"> <div class="container"> <nav class="header__nav nav"> <a href="#" name="top" class="nav__brand">Witch of mountain winds </a> <input type="checkbox" class="nav__toggle" id="nav__toggle"> <label for="nav__toggle" class="nav__button"> <span class="nav__toggler-span"></span> </label> <ul class="nav__list"> <li class="nav__item"> <a href="#shop" class="nav__link">Shop</a> </li> <li class="nav__item"> <a href="#contact" class="nav__link">Contact</a> </li> <li class="nav__item"> <a href="#about" class="nav__link">About</a> </li> </ul> <a href="#" class="nav__basket"></a> </nav> <div class="header__main"> <div class="header__card"> <h1 class="header__title">Brand of <br> eco-cosmetics and magic candles </h1> <span class="header__subtitle">20% of sales at a wild bird shelter</span> <a href="#shop" class="header__button"> Shop</a> </div> <div class="header__image"></div> </div> </div> </header> <main> <div class="container"> <div class="scroll"> <div class="scroll__text"> Biologists say that birds are indicators of the environmental situation, and over the past half century, the population of seabirds has declined by 70%. Birds die due to environmental problems and human intervention in the natural environment. </div> <div class="scroll__phrase"> if you choose the gifts of nature and care about it’s - scroll down </div> </div> <div class="about"> <a name="about"></a> <span class="about__pointer">Witch of Mountain winds</span> <div class="about__card"> <h2 class="about__title">About our Brand</h2> <div class="about__text"> <p class="about__text-first">Our brand cosmetics are made from natural ingredients and we are promoting them to the masses. Shampoo, hair conditioner, soap - in recycled paper. Creams, oils, washing products in glass containers with recycled paper labels. No synthetics and microplastics in cosmetics. And the packaging from it can be returned for recycling or reused. </p> <p class="about__text-second">We are all neighbors of one big House. And we must protect what we have. Destroying everything around for the sake of consumerism and imaginary convenience, we destroy what does not belong to us. Be aware of your choice! </p> </div> <a href="#" class="about__button">Lern More</a> </div> <div class="about__image"></div> <div class="about__image-half"></div> </div> <div class="shop"> <a name="shop"></a> <h2 class="shop__title">Shop</h2> <div class="shop__menu"> <a href="#" class="shop__link">Face</a> <a href="#" class="shop__link">Body</a> <a href="#" class="shop__link">Hair</a> <a href="#" class="shop__link">Candles</a> </div> <div class="shop__products"> <div class="shop__pointer">Shop</div> <div class="shop__card"> <img src="oil.c791840c.jpg" alt="Hydrophilic oil" class="shop__image"> <span class="shop__product-name">Hydrophilic oil</span> <div class="shop__product-price">160 uah</div> </div> <div class="shop__card shop__card_2"> <img src="cream.6ff5a494.jpg" alt="Face cream" class="shop__image"> <span class="shop__product-name">Face cream</span> <div class="shop__product-price">210 uah</div> </div> <div class="shop__card shop__card_3"> <img src="ubtan.f0138e64.jpg" alt="Ubtan" class="shop__image"> <span class="shop__product-name">Ubtan</span> <div class="shop__product-price">160 uah</div> </div> </div> <div class="shop__slider"> <button class="shop__slider-button shop__slider-button_left"> </button> <button class="shop__slider-button shop__slider-button_right"> </button> </div> <a href="" class="shop__button">All products</a> </div> <div class="creators"> <div class="creators__pointer">About the creators</div> <div class="creators__card"> <h2 class="creators__title">About the <br> creators </h2> <p class="creators__description"> My name is Victoria, I’m a master at candle making and natural cosmetics. In the past, a cynologist, was engaged in herbs, made layouts on the Tarot. </p> <p class="creators__description creators__description_middle"> I am also a volunteer to save wild birds in distress, a consultant to the Phoenix Wildlife Rehabilitation Center, a member of the Society for the Conservation of Birds of Ukraine with the support of Birdlife International. </p> <p class="creators__description creators__description_last"> My husband and I live in the Carpathian region in the city of Chernivtsi. I dream of my center for the rehabilitation of wild birds, as it is very difficult to rescue birds in a rented communal apartment. </p> <a href="#" class="creators__link">Lern more</a> <a href="#contact" class="creators__button">To contact us</a> </div> <div class="creators__image"></div> </div> <div class="ingredients"> <span class="ingredients__pointer">Ingredients</span> <div class="ingredients__card"> <h2 class="ingredients__title">Ayurvedic Tooth Powder</h2> <a href="#" class="ingredients__link">Lern More</a> </div> <div class="ingredients__block"> <span class="ingredients__name">Kaolin</span> <span class="ingredients__name">sivak (Persian salvador)</span> <span class="ingredients__name">calcium carbonate</span> <span class="ingredients__name">licorice root</span> <span class="ingredients__name">turmeric</span> </div> <div class="ingredients__image"></div> </div> <div class="eco"> <div class="eco__block"> <div class="eco__image eco__image_1"></div> <span class="eco__caption"> No synthetics and microplastics </span> </div> <div class="eco__block"> <div class="eco__image eco__image_2"></div> <span class="eco__caption"> product packaging can be recycled or reused </span> </div> <div class="eco__block"> <div class="eco__image eco__image_3"></div> <span class="eco__caption"> only natural ingredients </span> </div> </div> <div class="contact"> <a name="contact"></a> <div class="contact__pointer">Help</div> <div class="contact__card"> <h2 class="contact__title">Contact Us</h2> <p class="contact__text"> we will help you choose a product that suits you and answer your other questions </p> <form action="" method="GET" class="contact__form"> <input type="text" name="name" class="contact__form-field contact__form-field_name" placeholder="Your Name" required> <input type="email" name="@mail" class="contact__form-field" placeholder="E-mail" required> <input type="tel" name="Phone Number" class="contact__form-field" placeholder="Phone Number" required> <input type="textarea" name="Message" class="contact__form-field contact__form-field_message" placeholder="Your Message" required> <button class="contact__button">Send a Message</button> </form> </div> <div class="contact__image"></div> </div> </div> </main> <footer class="footer"> <div class="footer__left"> <div class="footer__nav"> <a href="#shop" class="footer__link">Shop</a> <a href="#contact" class="footer__link">Contact</a> <a href="#about" class="footer__link">About</a> </div> <div class="footer__wrapper"> <span class="footer__copyright-name">Copyright</span> <span class="footer__brand">2019 Witch of mountain winds</span> </div> </div> <div class="footer__block"> <a href="http://maps.google.com/?q=Ukraine" class="footer__block-link">Ukraine</a> <a href="mailto:support.mountain@gmail.com" class="footer__block-link"> support.mountain@gmail.com </a> <a href="tel:+380934476839" class="footer__block-link">+380934476839</a> <span class="footer__schedule"> Support is available Monday - Friday 9am-6pm </span> <div class="footer__network"> <a href="https://www.facebook.com/profile.php?id=100029127313732" class="footer__network-link footer__network-link_1"></a> <a href="https://www.instagram.com/ily_a.a/" class="footer__network-link footer__network-link_2"></a> </div> </div> </footer> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Witch of mountain winds</title>
+    <link rel="stylesheet" href="/main.48b3db1d.css">
+    <link rel="icon" type="image/png" href="/Group 8.97298e15.png">
+  <script src="/main.48b3db1d.js"></script></head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="header__nav nav">
+          <a href="#" name="top" class="nav__brand">Witch of mountain winds
+          </a>
+
+          <input type="checkbox" class="nav__toggle" id="nav__toggle">
+          <label for="nav__toggle" class="nav__button">
+            <span class="nav__toggler-span"></span>
+          </label>
+
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a href="#shop" class="nav__link">Shop</a>
+            </li>
+            <li class="nav__item">
+              <a href="#contact" class="nav__link">Contact</a>
+            </li>
+            <li class="nav__item">
+              <a href="#about" class="nav__link">About</a>
+            </li>
+          </ul>
+          <a href="#" class="nav__basket"></a>
+        </nav>
+        <div class="header__main">
+          <div class="header__card">
+            <h1 class="header__title">Brand of
+              <br>
+              eco-cosmetics and magic candles
+            </h1>
+            <span class="header__subtitle">20% of sales at a wild bird shelter</span>
+            <a href="#shop" class="header__button"> Shop</a>
+          </div>
+          <div class="header__image"></div>
+        </div>
+
+      </div>
+    </header>
+
+    <main>
+      <div class="container">
+        <div class="scroll">
+          <div class="scroll__text">
+            Biologists say that birds are indicators
+            of the environmental situation, and over the past half century,
+            the population of seabirds has declined by 70%. Birds die due
+            to environmental problems and human intervention in the natural
+            environment.
+          </div>
+          <div class="scroll__phrase">
+            if you choose the gifts of nature and care about it’s - scroll down
+          </div>
+        </div>
+
+
+        <div class="about">
+          <a name="about"></a>
+          <span class="about__pointer">Witch of Mountain winds</span>
+          <div class="about__card">
+            <h2 class="about__title">About our Brand</h2>
+            <div class="about__text">
+              <p class="about__text-first">Our brand cosmetics are made from natural
+                ingredients and we are promoting them to the masses. Shampoo, hair
+                conditioner, soap - in recycled paper. Creams, oils, washing products
+                in glass containers with recycled paper labels. No synthetics and
+                microplastics in cosmetics. And the packaging from it can be
+                returned for recycling or reused.
+              </p>
+              <p class="about__text-second">We are all neighbors of one big House. And
+                we must protect what we have. Destroying everything around for the sake
+                of consumerism and imaginary convenience, we destroy what does not belong
+                to us. Be aware of your choice!
+              </p>
+            </div>
+            <a href="#" class="about__button">Lern More</a>
+          </div>
+          <div class="about__image"></div>
+          <div class="about__image-half"></div>
+        </div>
+
+        <div class="shop">
+          <a name="shop"></a>
+          <h2 class="shop__title">Shop</h2>
+          <div class="shop__menu">
+            <a href="#" class="shop__link">Face</a>
+            <a href="#" class="shop__link">Body</a>
+            <a href="#" class="shop__link">Hair</a>
+            <a href="#" class="shop__link">Candles</a>
+          </div>
+          <div class="shop__products">
+            <div class="shop__pointer">Shop</div>
+            <div class="shop__card">
+              <img src="/oil.50d9db09.jpg" alt="Hydrophilic oil" class="shop__image">
+              <span class="shop__product-name">Hydrophilic oil</span>
+              <div class="shop__product-price">160 uah</div>
+            </div>
+            <div class="shop__card shop__card_2">
+              <img src="/cream.861e611d.jpg" alt="Face cream" class="shop__image">
+              <span class="shop__product-name">Face cream</span>
+              <div class="shop__product-price">210 uah</div>
+            </div>
+            <div class="shop__card shop__card_3">
+              <img src="/ubtan.39669de3.jpg" alt="Ubtan" class="shop__image">
+              <span class="shop__product-name">Ubtan</span>
+              <div class="shop__product-price">160 uah</div>
+            </div>
+          </div>
+          <div class="shop__slider">
+            <button class="shop__slider-button shop__slider-button_left">
+            </button>
+            <button class="shop__slider-button shop__slider-button_right">
+            </button>
+          </div>
+          <a href="" class="shop__button">All products</a>
+        </div>
+
+        <div class="creators">
+          <div class="creators__pointer">About the creators</div>
+          <div class="creators__card">
+            <h2 class="creators__title">About the
+              <br>
+              creators
+            </h2>
+            <p class="creators__description">
+              My name is Victoria, I’m a master at candle making and natural
+              cosmetics. In the past, a cynologist, was engaged in herbs,
+              made layouts on the Tarot.
+            </p>
+            <p class="creators__description creators__description_middle">
+              I am also a volunteer to save wild birds in distress, a consultant
+              to the Phoenix Wildlife Rehabilitation Center, a member of the
+              Society for the Conservation of Birds of Ukraine with the support
+              of Birdlife International.
+            </p>
+            <p class="creators__description creators__description_last">
+              My husband and I live in the Carpathian region in the city of
+              Chernivtsi. I dream of my center for the rehabilitation of
+              wild birds, as it is very difficult to rescue birds in a rented
+              communal apartment.
+            </p>
+            <a href="#" class="creators__link">Lern more</a>
+            <a href="#contact" class="creators__button">To contact us</a>
+          </div>
+          <div class="creators__image"></div>
+        </div>
+
+        <div class="ingredients">
+          <span class="ingredients__pointer">Ingredients</span>
+          <div class="ingredients__card">
+            <h2 class="ingredients__title">Ayurvedic Tooth Powder</h2>
+            <a href="#" class="ingredients__link">Lern More</a>
+          </div>
+          <div class="ingredients__block">
+            <span class="ingredients__name">Kaolin</span>
+            <span class="ingredients__name">sivak (Persian salvador)</span>
+            <span class="ingredients__name">calcium carbonate</span>
+            <span class="ingredients__name">licorice root</span>
+            <span class="ingredients__name">turmeric</span>
+          </div>
+
+          <div class="ingredients__image"></div>
+        </div>
+
+        <div class="eco">
+          <div class="eco__block">
+            <div class="eco__image eco__image_1"></div>
+            <span class="eco__caption">
+              No synthetics and microplastics
+            </span>
+          </div>
+          <div class="eco__block">
+            <div class="eco__image eco__image_2"></div>
+            <span class="eco__caption">
+              product packaging can be recycled or reused
+            </span>
+          </div>
+          <div class="eco__block">
+            <div class="eco__image eco__image_3"></div>
+            <span class="eco__caption">
+              only natural ingredients
+            </span>
+          </div>
+        </div>
+
+        <div class="contact">
+          <a name="contact"></a>
+          <div class="contact__pointer">Help</div>
+          <div class="contact__card">
+            <h2 class="contact__title">Contact Us</h2>
+            <p class="contact__text">
+              we will help you choose a product that suits you and answer
+              your other questions
+            </p>
+            <form action="" method="GET" class="contact__form">
+              <input type="text" name="name" class="contact__form-field contact__form-field_name" placeholder="Your Name" required="">
+
+              <input type="email" name="@mail" class="contact__form-field" placeholder="E-mail" required="">
+
+              <input type="tel" name="Phone Number" class="contact__form-field" placeholder="Phone Number" required="">
+
+              <input type="textarea" name="Message" class="contact__form-field contact__form-field_message" placeholder="Your Message" required="">
+
+              <button class="contact__button">Send a Message</button>
+            </form>
+          </div>
+          <div class="contact__image"></div>
+        </div>
+      </div>
+    </main>
+
+    <footer class="footer">
+      <div class="footer__left">
+        <div class="footer__nav">
+          <a href="#shop" class="footer__link">Shop</a>
+          <a href="#contact" class="footer__link">Contact</a>
+          <a href="#about" class="footer__link">About</a>
+        </div>
+        <div class="footer__wrapper">
+          <span class="footer__copyright-name">Copyright</span>
+          <span class="footer__brand">2019 Witch of mountain winds</span>
+        </div>
+      </div>
+      <div class="footer__block">
+        <a href="http://maps.google.com/?q=Ukraine" class="footer__block-link">Ukraine</a>
+        <a href="mailto:support.mountain@gmail.com" class="footer__block-link">
+          support.mountain@gmail.com
+        </a>
+        <a href="tel:+380934476839" class="footer__block-link">+380934476839</a>
+        <span class="footer__schedule">
+          Support is available Monday - Friday 9am-6pm
+        </span>
+        <div class="footer__network">
+          <a href="https://www.facebook.com/profile.php?id=100029127313732" class="footer__network-link footer__network-link_1"></a>
+          <a href="https://www.instagram.com/ily_a.a/" class="footer__network-link footer__network-link_2"></a>
+        </div>
+      </div>
+    </footer>
+
+  </body>
+</html>
